--- a/css/index.html
+++ b/css/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-      <title>Radha</title>
-      <link rel="stylesheet" href="ram.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="port.css">
 </head>
-<h1 id="center"> heading h</h1>
 <body>
-   <div id="outer">
-     outer<div id="inner">inner</div>
-</div>
-<section class="port"> archit verma </section>
-<section class="port"> cse </section>
-<section class="port"> kiet </section></body>
+    <div id="horizontal">horizontal
+    <div id="vertical">vertical
+        <div id="image">my photo</div>
+    </div>
+   
+    </div>
+    <h1 id="">Lets See</h1>
+    <div class="footer">Made With &#9829;</div>
+</body>
 </html>
